lab24/1-mariadb-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mariadb
  labels:
    app: mariadb
spec:
  containers:
  - env:
    - name: MARIADB_ROOT_PASSWORD
      value: s3cr3t
    - name: MARIADB_USER
      value: wordpress
    - name: MARIADB_PASSWORD
      value: w0rdpre33
    - name: MARIADB_DATABASE
      value: wordpress
    image: bitnami/mariadb
    name: mariadb
    ports:
    - containerPort: 3306
    resources: {}
