lab24/4-wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: wordpress
  labels:
    app: wordpress
  name: wordpress
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: wordpress
