lab24/5-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
spec:
  rules:
  - host: wordpress-student01.t9v.de
    http:
      paths:
      - backend:
          service:
            name: wordpress
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - wordpress-student01.t9v.de
